--- a/src/assets/components_CSS/header.css
+++ b/src/assets/components_CSS/header.css
@@ -1,50 +1,59 @@
 * {
-    font-family: Raleway;
-    box-sizing: border-box;
-  }
-  body,
-  html {
-    margin: 0;
-    height: 100%;
-  }
-  .separator {
-    display: inline;
-  }
-  .top-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-    height: 60px;
-    position: relative;
-    z-index: 100;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 1rem;
-  }
-  /* .logo img {
+  font-family: Raleway;
+  box-sizing: border-box;
+}
+body,
+html {
+  margin: 0;
+  height: 100%;
+}
+.separator {
+  display: inline;
+}
+.top-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+  height: 60px;
+  position: relative;
+  z-index: 100;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 1rem;
+}
+/* .logo img {
     height: 50px;
   }
   
   .logo {
     display: flex;
   } */
-  
-  .logo {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-  }
-  
-  .logo img {
-    max-width: 60px;
-  }
-  
-  .photo-a-text {
+
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.logo img {
+  max-width: 60px;
+}
+
+.show-men-button {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+
+
+}
+
+/* .photo-a-text {
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -65,229 +74,229 @@
   
   .dark .photo-a-text .self-center {
     color: #fff;
-  }
-  /*  */
-  .menu {
+  } */
+/*  */
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.menu > li {
+  overflow: hidden;
+}
+.menu li a {
+  color: #000;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+  display: inline-block;
+  padding: 5px 5px;
+  position: relative;
+  padding-left: 1rem;
+}
+.menu a:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #1d4ed8;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.menu a:hover:after {
+  width: 100%;
+  left: 0;
+}
+.nav-signOut:hover {
+  color: #666;
+  cursor: pointer;
+}
+.menu-button-container {
+  display: none;
+  height: 100%;
+  width: 30px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#menu-toggle {
+  display: none;
+}
+.menu-button,
+.menu-button::after,
+.menu-button::before {
+  display: block;
+  background-color: #1d4ed8;
+  position: absolute;
+  height: 4px;
+  width: 30px;
+  transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 2px;
+}
+.menu-button::before {
+  content: "";
+  margin-top: -8px;
+}
+.menu-button::after {
+  content: "";
+  margin-top: 8px;
+}
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+  margin-top: 0;
+  transform: rotate(405deg);
+}
+#menu-toggle:checked + .menu-button-container .menu-button {
+  background: rgba(255, 255, 255, 0);
+}
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+  margin-top: 0;
+  transform: rotate(-405deg);
+}
+@media (max-width: 700px) {
+  .top-nav {
     display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  .menu > li {
-    overflow: hidden;
-  }
-  .menu li a {
-    color: #000;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 0.15em;
-    display: inline-block;
-    padding: 5px 5px;
+    justify-content: right;
+    height: 60px;
     position: relative;
-    padding-left: 1rem;
   }
-  .menu a:after {
-    background: none repeat scroll 0 0 transparent;
-    bottom: 0;
-    content: "";
-    display: block;
-    height: 2px;
-    left: 50%;
+  .menu {
     position: absolute;
-    background: #1d4ed8;
-    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-    width: 0;
-  }
-  .menu a:hover:after {
-    width: 100%;
+    top: 60px;
     left: 0;
-  }
-  .nav-signOut:hover {
-    color: #666;
-    cursor: pointer;
+    flex-direction: column;
+    width: 100%;
+    list-style-type: none;
+    max-height: 0;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 5px 5px 0;
+    transition: all 0.3s ease 0s;
+    overflow: hidden;
+    border-radius: 10px;
   }
   .menu-button-container {
-    display: none;
-    height: 100%;
-    width: 30px;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: flex;
   }
-  #menu-toggle {
-    display: none;
+  #menu-toggle:checked ~ .menu {
+    max-height: 300px;
+    padding: 20px 0;
   }
-  .menu-button,
-  .menu-button::after,
-  .menu-button::before {
+  .menu > li {
     display: block;
-    background-color: #1d4ed8;
-    position: absolute;
-    height: 4px;
-    width: 30px;
-    transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 2px;
+    width: 100%;
+    text-align: left;
+    padding: 8px 16px;
+    display: flex;
+    justify-content: flex-end;
   }
-  .menu-button::before {
-    content: "";
-    margin-top: -8px;
+  .menu > li:last-child {
+    border-bottom: none;
   }
-  .menu-button::after {
-    content: "";
-    margin-top: 8px;
-  }
-  #menu-toggle:checked + .menu-button-container .menu-button::before {
-    margin-top: 0;
-    transform: rotate(405deg);
-  }
-  #menu-toggle:checked + .menu-button-container .menu-button {
-    background: rgba(255, 255, 255, 0);
-  }
-  #menu-toggle:checked + .menu-button-container .menu-button::after {
-    margin-top: 0;
-    transform: rotate(-405deg);
-  }
-  @media (max-width: 700px) {
-    .top-nav {
-      display: flex;
-      justify-content: right;
-      height: 60px;
-      position: relative;
-    }
-    .menu {
-      position: absolute;
-      top: 60px;
-      left: 0;
-      flex-direction: column;
-      width: 100%;
-      list-style-type: none;
-      max-height: 0;
-      background-color: #fff;
-      box-shadow: rgba(0, 0, 0, 0.1) 0 5px 5px 0;
-      transition: all 0.3s ease 0s;
-      overflow: hidden;
-      border-radius: 10px;
-    }
-    .menu-button-container {
-      display: flex;
-    }
-    #menu-toggle:checked ~ .menu {
-      max-height: 300px;
-      padding: 20px 0;
-    }
-    .menu > li {
-      display: block;
-      width: 100%;
-      text-align: left;
-      padding: 8px 16px;
-      display: flex;
-      justify-content: flex-end;
-    }
-    .menu > li:last-child {
-      border-bottom: none;
-    }
-  }
-  .photo-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-  }
-  .pop-up {
-    position: relative;
-  }
-  #smallMenu {
-    position: absolute;
-    right: 0;
-    width: 200px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    z-index: 999;
-    overflow-wrap: break-word;
+}
+.photo-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+.pop-up {
+  position: relative;
+}
+#smallMenu {
+  position: absolute;
+  right: 0;
+  width: 200px;
+  border: 1px solid #ddd;
+  padding: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  overflow-wrap: break-word;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
+  background-color: #f8f9fa;
+  width: 200px;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#smallMenu li {
+  padding: 0.5rem;
+}
+
+#smallMenu li:hover {
+  background-color: #f1f1f1;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-bottom: 1px solid #dee2e6;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.user-name {
+  font-weight: 700;
+}
+.user-email {
+  font-style: italic;
+}
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.nav-signOut {
+  color: red;
+}
+.user-email,
+.user-name {
+  display: block;
+  color: #212529;
+}
+.user-name {
+  font-size: 16px;
+  font-weight: 700;
+}
+.user-email {
+  font-size: 14px;
+}
+.menu-link:hover {
+  color: #1d4ed8;
+}
+/* active router */
+.menu-link .header-active-link {
+  color: #1d4ed8;
+  /* 1d4ed8 */
+}
+
+@media screen and (min-width: 701px) {
+  .nav-container {
+    display: flex;
+    gap: 20px;
     border-radius: 8px;
+    margin-bottom: 2rem;
     text-align: center;
     box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
-    background-color: #f8f9fa;
-    width: 200px;
-    border-radius: 5px;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  #smallMenu li {
-    padding: 0.5rem;
-  }
-  
-  #smallMenu li:hover {
-    background-color: #f1f1f1;
-  }
-  .px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    border-bottom: 1px solid #dee2e6;
-  }
-  .py-3 {
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
-  }
-  .user-name {
-    font-weight: 700;
-  }
-  .user-email {
-    font-style: italic;
-  }
-  .menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+    flex-wrap: nowrap;
+    flex-direction: column;
   }
   .nav-signOut {
     color: red;
   }
-  .user-email,
-  .user-name {
-    display: block;
-    color: #212529;
-  }
-  .user-name {
-    font-size: 16px;
-    font-weight: 700;
-  }
-  .user-email {
-    font-size: 14px;
-  }
-  .menu-link:hover {
-    color: #1d4ed8;
-  }
-  /* active router */
-  .menu-link .header-active-link {
-    color: #1d4ed8;
-    /* 1d4ed8 */
-  }
-  
-  @media screen and (min-width: 701px) {
-    .nav-container {
-      display: flex;
-      gap: 20px;
-      border-radius: 8px;
-      margin-bottom: 2rem;
-      text-align: center;
-      box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
-      flex-wrap: nowrap;
-      flex-direction: column;
-    }
-    .nav-signOut {
-      color: red;
-    }
-  }
+}
