--- a/src/assets/components_CSS/home.css
+++ b/src/assets/components_CSS/home.css
@@ -28,7 +28,7 @@ header {
     align-items: center;
     text-align: center;
     margin-bottom: 3rem;
-    background-color: #fff;
+    /* background-color: #fff; */
     color: #1c1b1b;
     padding: 2rem;
     border-radius: 1rem;
@@ -63,6 +63,8 @@ header p {
     margin-bottom: 2rem;
     text-align: center;
     box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    color: #000;
 }
 
 .left h2 {
@@ -143,12 +145,15 @@ router-link:hover {
 
 /* Signed in section styles */
 .signed-in {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 3rem;
     padding: 2rem;
+    border-radius: 8px;
+    margin-bottom: 2rem;
+    text-align: center;
+    box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+    color: #000;
+
+    
 }
 
 .signed-in p {
