--- a/src/assets/components_CSS/header.css
+++ b/src/assets/components_CSS/header.css
@@ -1,7 +1,3 @@
-* {
-  font-family: Raleway;
-  box-sizing: border-box;
-}
 body,
 html {
   margin: 0;
@@ -17,26 +13,21 @@ html {
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
-  height: 60px;
+  height: 90px;
   position: relative;
   z-index: 100;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 1rem;
+  font-family: "Roboto";
 }
-
-/* .logo {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  cursor: pointer;
-} */
 
 .logo {
   display: flex;
   align-items: center;
   cursor: pointer;
+  padding-left: 10px;
 }
 
 .logo img {
@@ -60,41 +51,18 @@ html {
   color: inherit;
 }
 
-/* .photo-a-text {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: inherit;
-    position: fixed;
-
-    
-  }
-  
-  .photo-a-text img {
-    margin-right: 10px;
-  }
-  
-  .photo-a-text .self-center {
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: #000;
-    white-space: nowrap;
-  }
-  
-  .dark .photo-a-text .self-center {
-    color: #fff;
-  } */
-/*  */
 .menu {
   display: flex;
   flex-direction: row;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  gap: 10px;
 }
 .menu > li {
   overflow: hidden;
 }
+
 .menu li a {
   color: #000;
   text-transform: uppercase;
@@ -105,18 +73,32 @@ html {
   position: relative;
   padding-left: 1rem;
 }
-.menu a:after {
-  background: none repeat scroll 0 0 transparent;
-  bottom: 0;
-  content: "";
-  display: block;
-  height: 2px;
-  left: 50%;
-  position: absolute;
-  background: #1d4ed8;
-  transition: width 0.3s ease 0s, left 0.3s ease 0s;
-  width: 0;
+
+@media screen and (min-width: 700px) {
+  .menu li a {
+    color: #000;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0em;
+    display: inline-block;
+    height: 36px;
+    width: 120px;
+    padding: 8px 5px;
+    font-size: 14px;
+    position: relative;
+    padding-left: rem;
+    background-color: #e1e0e0;
+    color: #666;
+    border-radius: 25px;
+    text-align: center;
+  }
+
+  .menu-link .header-active-link {
+    color: #fff;
+    background-color: #666666;
+  }
 }
+
 .menu a:hover:after {
   width: 100%;
   left: 0;
@@ -141,7 +123,7 @@ html {
 .menu-button::after,
 .menu-button::before {
   display: block;
-  background-color: #1d4ed8;
+  background-color: #000;
   position: absolute;
   height: 4px;
   width: 30px;
@@ -168,6 +150,18 @@ html {
   transform: rotate(-405deg);
 }
 @media (max-width: 700px) {
+  .menu a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #666;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
   .top-nav {
     display: flex;
     justify-content: right;
@@ -208,8 +202,9 @@ html {
   }
 }
 .photo-icon {
-  width: 40px;
-  height: 40px;
+  width: 74px;
+
+  height: 77px;
 }
 .sr-only {
   position: absolute;
@@ -268,6 +263,7 @@ html {
   list-style: none;
   padding: 0;
   margin: 0;
+  padding-right: 40px;
 }
 .nav-signOut {
   color: red;
@@ -284,14 +280,8 @@ html {
 .user-email {
   font-size: 14px;
 }
-.menu-link:hover {
-  color: #1d4ed8;
-}
+
 /* active router */
-.menu-link .header-active-link {
-  color: #1d4ed8;
-  /* 1d4ed8 */
-}
 
 @media screen and (min-width: 701px) {
   .nav-container {
@@ -303,12 +293,15 @@ html {
     box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.1);
     flex-wrap: nowrap;
     flex-direction: column;
+
+    position: fixed;
+    top: 5;
+    width: 100%;
+    z-index: 100;
+    top: 0;
+    transition: top 0.5s ease-in-out;
   }
   .nav-signOut {
     color: red;
   }
 }
-
-
-
-
